--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </header>
     <main>
         <section class="about">
-            <div class="about-picture">
+            <div class="about-picture" data-aos="fade-up" data-aos-delay="300">
                 <img src="assets/images.svg" alt="sobre" loading="lazy">
             </div>
-            <div class="about-content">
+            <div class="about-content" data-aos="zoom-out-left" data-aos-delay="250">
                 <h2 class="about-title">
                     SOBRE
                 </h2>
@@ -60,7 +60,9 @@
             <h3>SERVIÇOS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum deserunt quae voluptatem quisquam ducimus nobis dolore aliquam nihil maxime, illo quo quam aspernatur ullam quia obcaecati? Corrupti ipsum dolore eveniet.</p>
             <section class="card-grid">
-                <section class="card">
+                <section class="card" data-aos="fade-right"
+                data-aos-delay="300"
+                data-aos-easing="ease-in-sine">
                     <section class="card-img">
                         <img src="assets/corte1.png" alt="corte de cabelo" loading="lazy">
                     </section>
@@ -69,7 +71,9 @@
                         <button class="card-button">R$ 45,00</button>
                     </section>
                 </section>
-                <section class="card">
+                <section class="card" data-aos="fade-right"
+                data-aos-delay="500"
+                data-aos-easing="ease-in-sine">
                     <section class="card-img">
                         <img src="assets/corte2.png" alt="corte de cabelo" loading="lazy">
                     </section>
@@ -78,7 +82,9 @@
                         <button class="card-button">R$35,00</button>
                     </section>
                 </section>
-                <section class="card">
+                <section class="card" data-aos="fade-right"
+                data-aos-delay="700"
+                data-aos-easing="ease-in-sine">
                     <section class="card-img">
                         <img src="assets/corte3.png" alt="corte de cabelo" loading="lazy">
                     </section>
